crates/nash-driver/tests/solve/snapshots/solve__inference__nominal_record_trait_argument_has_no_impl.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (..)\ntrait Keep 'a 'b where\n    keep : 'a -> 'b -> 'a\ntype alias item = { item : unit }\nvalue = keep () { item = () }\n"
info: diagnostic
---
nash::type::missing_impl

  × No impl for `Keep unit item`.
   ╭─[Main.nash:5:9]
 4 │ type alias item = { item : unit }
 5 │ value = keep () { item = () }
   ·         ──┬─
   ·           ╰── required by `keep`
   ╰────
  help: Import or define an impl for `Keep unit item`.
