crates/nash-driver/tests/solve/snapshots/solve__inference__parameterized_transparent_alias_preserves_record_identity.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (..)\ntype alias point = { x : int }\ntype alias other = { x : int }\ntype alias identity 'a = 'a\nf : identity point -> identity other\nf r = r\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `identity other`, found `identity point`.
   ╭─[Main.nash:6:7]
 4 │ type alias identity 'a = 'a
 5 │ f : identity point -> identity other
   ·     ────────────────┬───────────────
   ·                     ╰── declared type
 6 │ f r = r
   ·       ┬
   ·       ╰── body of `f`
   ╰────
