crates/nash-driver/tests/solve/snapshots/solve__inference__record_accessor_needs_known_type.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (getName)\n\ngetName = .name\n"
info: diagnostic
---
nash::type::ambiguous_record_access

  × Cannot determine record type `'a`.
   ╭─[Main.nash:3:11]
 2 │ 
 3 │ getName = .name
   ·           ──┬──
   ·             ╰── field `name` accessor
   ╰────
  help: Add a type annotation that identifies the record.
